--- a/index.html
+++ b/index.html
@@ -11,25 +11,35 @@
 
     <!-- udělat z toho form, input text a input submit, změnit pak js-->
 <div class="section1" id="section1"> 
+
+<div class="section1__wrapper">
+<h2 class="section1__header"> Vítejte ve Špica kvízu </h2>
     <form id="form">
-    <input type="text" name="alias" id="inputName" placeholder="Zadejte své jméno či přezdívku" required>
-    <input type="submit" value="Potvrdit a odeslat">
-   
+    <input class="section1__input" type="text" name="alias" id="inputName" placeholder="Zadejte své jméno či přezdívku" required><br> 
+    <input class="section1__button" type="submit" value="Potvrdit a odeslat"> 
 </form>
+</div>
+
 </div>
 
 
 
 <div class="section2" id="section2"> 
 
+<div class="section2__wrapper">
 <div class="question" id="question"> </div> 
 <div class="answer" id="answer"> </div>
 <button class="button" id="btn"> Potvrdit </button>
+</div>
 
 </div>
 
 
 <div class="section3" id="section3"> 
+    <div class="section3__wrapper" id="section3__wrapper"> 
+
+
+    </div>
    
 </div>
 
