--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.pkng">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+    <title>Špica Kvíz</title>
 </head>
 <body>
-
-    <!-- udělat z toho form, input text a input submit, změnit pak js-->
+    
 <div class="section1" id="section1"> 
 
 <div class="section1__wrapper">
@@ -31,12 +33,14 @@
 <div class="answer" id="answer"> </div>
 <button class="button" id="btn"> Potvrdit </button>
 </div>
-
+<!-- <p class="section2__countdown">6 / 5</p>-->
 </div>
 
 
 <div class="section3" id="section3"> 
     <div class="section3__wrapper" id="section3__wrapper"> 
+        <!-- <h2>A máš hotovo!</h2>-->
+   
 
 
     </div>
